# SockBot

./: .gitignore  BotSecrets.json  BotSecrets.json.template  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  database.db  docker-compose.yml  pyproject.toml  transcribedData.txt
.github/workflows/: Deployment.yml  Integration.yml
bot/: __main__.py  bot_secrets.py  consts.py  errors.py  extensions.py  soc_bot.py  sock_bot.py
bot/cogs/: Fancy_Quote.py  birthday_cog.py  chain_cog.py  dad_joke_cog.py  define_cog.py  distance_cog.py  example_cog.py  gif_me_cog.py  help_cog.py  image_dots_cog.py  manage_classes_cog.py  owner_cog.py  owo_cog.py  pin_cog.py  riddle_cog.py  source_code_cog.py  translate_cog.py  weather_cog.py
bot/cogs/base_converter/: base_converter_cog.py
bot/cogs/geo_cog/: database.db  database.py  flagdict.py  geo_cog.py  geo_main.py  geo_view.py
bot/cogs/geo_cog/streetviewrandomizer/: StreetViewRandom.py  coordinate.py  countries.py  (+2 more)
bot/cogs/memes_cog/: memes_cog.py
bot/cogs/random_cog/: random_cog.py
bot/data/: CreateTables.sql  base_repository.py  birthday_repository.py  class_repository.py  database.py  geo_repository.py  georepository.py  pin_repository.py
bot/messaging/: events.py
bot/modals/: class_modal.py  ta_modal.py
bot/models/: birthday_model.py  class_models.py  geo_models.py
bot/services/: base_service.py  class_service.py  delete_message_service.py  example_service.py  message_handling_service.py  paginate_service.py  pin_service.py
bot/utils/: converters.py  helpers.py  user_choice.py
(+5 files in other folders)
