[tool.poetry]
name = "SockBot"
version = "0.1.0"
description = ""
authors = ["Jay"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
Pillow = "^9.2.0"
"discord.py" = "^2.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
